name:                PLPrinter
version:             0.3.0.0

synopsis:            A pretty printer built to be used with an in-progress
                     Programming Language 'PL'.

description:         This package defines 'Doc'uments - things which can be
                     printed nicely and appended to efficiently.

                     Documents may be composed of text, line-breaks and regions
                     of indentation and may be appended together.

                     Documents can be constructed by Printers - functions which map
                     values to possible Documents.

                     Documents can be deconstructed by a 'render' function which
                     takes formatting parameters to produce Text. The main
                     supported parameter is line length. When rendering a
                     Document, lines which exceed this length will have a
                     newline character forcibly inserted.

author:              Samuel A. Yallop
maintainer:          syallop@gmail.com
build-type:          Simple
cabal-version:       >= 1.10

library
  exposed-modules:     PLPrinter
                     , PLPrinter.Doc

  build-depends:       base >= 4.12
                     , text

  default-language:    Haskell2010
  ghc-options: -O2

test-suite hedgehog
    type:              exitcode-stdio-1.0
    main-is:           HedgehogTests.hs
    hs-source-dirs:    Test

    build-depends:     base >= 4.7

                     , PLPrinter >= 0.3

                     , containers >= 0.5
                     , hedgehog
                     , hedgehog-quickcheck
                     , semigroups
                     , text

    default-language:  Haskell2010

    other-extensions:  OverloadedStrings
                     , GeneralizedNewtypeDeriving
                     , LambdaCase
    ghc-options: -threaded -O2

